apps/hass/hass/hass-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hass
  namespace: hass
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hass
  template:
    metadata:
      labels:
        app: hass
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
      - name: hass
        image: ghcr.io/home-operations/home-assistant:2025.4.0@sha256:1b6ee3846f0dec0b211701bf60e72955b78493a41f58aab1d584e9f563e8a41d
        ports:
        - containerPort: 8123
          name: http
          protocol: TCP
        volumeMounts:
        - name: hass-data
          mountPath: /config
        resources:
          requests:
            memory: 420Mi
            cpu: "15m"
          limits:
            memory: 700Mi
        livenessProbe: &probe
          httpGet:
            path: /manifest.json
            port: http
          initialDelaySeconds: 15
        readinessProbe: *probe
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
      volumes:
      - name: hass-data
        persistentVolumeClaim:
          claimName: hass-pvc
