apps/hass/hass/hass-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass
  namespace: hass
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: http
  hostnames:
  - "hass.mgmt.<path:vaults/Kubernetes/items/cluster#domain>"
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass-https
  namespace: hass
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: https
  hostnames:
  - "hass.mgmt.<path:vaults/Kubernetes/items/cluster#domain>"
  rules:
  - backendRefs:
    - name: hass
      namespace: hass
      port: 8123
