apps/hass/hass/hass-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
  namespace: hass
spec:
  ingressClassName: nginx
  rules:
  - host: hass.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hass
              port:
                number: 8123
